# pyannote-audio_speaker-diarization_cpp

./: .gitignore  README.md
clustering/: Clustering.py
embeddings/: ECAPA-TDNN.py  README.md  SpeakerDiarizer.py  export.py  export1.py  export2.py  export3.py  hf_token.py  jitload.py  mm.py  myembedding.py  pyannote-embeddings.py  simple.py  threeModel.py
pipeline/: CMakeLists.txt  README.md
pipeline/cmake/: onnx.cmake  torch.cmake
pipeline/script/: verifyEveryStepResult.py
pipeline/src/: speakerDiarizer.cpp
pipeline/src/clustering/: CMakeLists.txt  Makefile  README.md  cluster.cpp  clustering.cpp  clustering.h
pipeline/src/frontend/: CMakeLists.txt  resampler.cc  resampler.h  wav.h
pipeline/src/onnxModel/: CMakeLists.txt  onnx_model.cc  onnx_model.h
pipeline/src/test/: closest_frame.txt
segment/: README.md  export.py  export2.py  mysegment.py  segment.py  simple.py  utils.py
